--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 ktor_version=1.5.2
 kotlin_version=1.4.10
 logback_version=1.2.3
+jda_version=4.2.0_227
+lavaplayer_version=1.3.67
 kotlin.code.style=official
