--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,5 @@ kotlin_version=1.4.10
 logback_version=1.2.3
 jda_version=4.2.0_227
 lavaplayer_version=1.3.67
+junit_version=5.6.0
 kotlin.code.style=official
