--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,5 @@ logback_version=1.2.3
 jda_version=4.2.0_227
 lavaplayer_version=1.3.67
 junit_version=5.6.0
+gson_version=2.8.6
 kotlin.code.style=official
